# discord-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  compose.yaml  consts.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  pytest.ini  react_fumo.py  requirements.txt  utils.py
.github/workflows/: docker-build.publish.yml  run_test.yml
activities/: activity.py  playing_consts.py  watching.py  watching_consts.py
commands/: fetch_entry.py  fumo  hgs.py
commands/ai/: ai_commands.py  llm_commands.py
commands/basic/: basic_commands.py
commands/bbt_count/: bbt_count.py  consts.py  db_functions.py  embeds.py  helpers.py
commands/boba/: .gitignore  README.md  boba.py  predict.py  train.py  validate.py
commands/capoo/: random_capoo.py  utils.py
commands/cat/: cat.py
commands/compare/: compare.py  compare_api.py  compare_cmd.py  consts.py
commands/confessions/: confession.py
commands/config/: config_commands.py  consts.py
commands/edit_entry/: edit_entry_cmd.py  edit_entry_modal.py  git_utils.py  github_pullrequest.py
components/: paginator.py
docker/: Dockerfile
functions/: README.md  reacts-README.md  reacts.py
mentioned/: mention_responses.py
modules/: async_utils.py  config.py  content_moderation.py  logging.py  probability.py  supabase.py
presence/: playing.py  watching.py  watching_consts.py
tests/: conftest.py  test_asyncio.py  test_deploy.py  test_fetch_entry.py  test_get_json.py  test_one_o_one.py  test_postprocess.py  test_shiba.py  test_taigi.py  test_tocfl.py
utils/: splitter.py
(+119 files in other folders)
